<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start"
    android:background="#0bb791"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="272dp"
                android:layout_height="267dp"
                android:layout_gravity="center"
                android:layout_marginTop="-40dp"
                android:contentDescription="@string/descripcion_elemento"
                app:srcCompat="@drawable/sifampi"
                tools:layout_editor_absoluteX="69dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/inicio"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="-20dp"
                android:background="#0bb791"
                android:gravity="center"
                android:text="@string/text_familiar"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/correo"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/hint_correoElectronico"
                android:inputType="textEmailAddress"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/contra"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/hint_contraseña"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <Button
                android:id="@+id/button"
                android:layout_width="210dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#463F3F"
                android:text="@string/button_ingresar"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="invisible"
                android:layout_gravity="center"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>