<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="start"
    android:background="#69DADB"
    tools:context=".Familia">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/descripcion_elemento"
                app:srcCompat="@drawable/usuario"
                tools:layout_editor_absoluteX="69dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/ID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:background="#69DADB">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="start"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:background="#1597E5"
                        android:gravity="center"
                        android:text="@string/text_paciente"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Paciente"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:textSize="20sp"
                        android:textColor="#000000" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:background="#1597E5"
                        android:gravity="center"
                        android:text="@string/text_edad"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Edad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:ems="8"
                        android:textSize="20sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:background="#1597E5"
                        android:gravity="center"
                        android:text="@string/text_sexo"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Genero"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:ems="8"
                        android:textSize="20sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:background="#1597E5"
                        android:gravity="center"
                        android:text="@string/text_doctor"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Doctor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:ems="8"
                        android:textSize="20sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:background="#1597E5"
                        android:gravity="center"
                        android:text="@string/text_piso"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Piso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:ems="8"
                        android:textSize="20sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp">

                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:background="#1597E5"
                        android:gravity="center"
                        android:text="@string/text_cama"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Cama"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:textColor="#000000"
                        android:textSize="20sp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="170dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:layout_marginRight="15dp"
                        android:background="#1597E5"
                        android:gravity="center"
                        android:text="@string/text_ingreso"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Ingreso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="8"
                        android:textColor="#000000"
                        android:textSize="20sp"/>

                </LinearLayout>



            </LinearLayout>

            <TextView
                android:id="@+id/textp1"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#1597E5"
                android:gravity="center"
                android:text="@string/text_estadoPaciente"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/Estado"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/textp2"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#1597E5"
                android:gravity="center"
                android:text="@string/text_avisos"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/Avisos"
                android:layout_width="350dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:gravity="center"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>